Fix item detail popup z-index.

--- a/app/scss/_style.scss
+++ b/app/scss/_style.scss
@@ -209,6 +209,7 @@ body > div, #header {
     width: 100%;
     height: 100%;
     color: #fff;
+    z-index: 10000;
     font-size: 13px;
     background: transparent;
     display: flex;
@@ -235,7 +236,7 @@ a {
   position: fixed;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-  z-index: 10000;
+  z-index: 2;
   top: 0;
   right: 0;
   bottom: 0;
@@ -1097,9 +1098,10 @@ img {
   }
 }
 
-.xur-move-popup {
-  position: fixed !important;
+.ngdialog.xur-move-popup {
+  position: fixed;
   height: 0;
+  z-index: 10000;
   height: fit-content;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, .8);
   .compare-items {
@@ -1558,47 +1560,6 @@ g {
   }
 }
 
-#faq-button {
-  display: inline-block;
-  background-color: #5b6e6c;
-  color: rgba(245, 245, 245, 0.6);
-  border-radius: 50%;
-  width: 14px;
-  height: 14px;
-  line-height: 14px !important;
-  cursor: pointer;
-  margin-left: 5px;
-  font-size: 10px !important;
-  &:hover {
-    background-color: #628e89;
-  }
-}
-
-#faq {
-  display: none;
-  position: fixed;
-  background: rgba(0, 0, 0, 0.86);
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 4;
-  cursor: pointer;
-  .content {
-    .title {
-      margin: 50px 50px 0;
-    }
-    ul {
-      margin: 10px 50px 0 30px;
-
-    }
-  }
-  a {
-    color: #fff;
-  }
-}
-
 #content {
   margin: 0 auto;
   margin-top: 15px;
@@ -1711,7 +1672,7 @@ div[class^="sort-"] {
   background-color: #222;
   top: 0;
   -webkit-overflow-scrolling: touch;
-  z-index: 10000;
+  z-index: 3;
   width: 295px;
   top: initial;
   left: initial;
